--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prisma": "^5.22.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "prettier": "^3.4.1"
   }
 }
