--- a/package.json
+++ b/package.json
@@ -18,5 +18,7 @@
   "devDependencies": {
     "nodemon": "^3.1.7",
     "prettier": "^3.4.1"
-  }
+  },
+  "repository": "https://github.com/Parkcw00/Item-simulater.git",
+  "author": "Parkcw00 <parkcw0325@gmail.com>"
 }
